<resources>
    <string name="app_name">Home</string>

    <string-array name="fruits">
        <item>https://images.pexels.com/photos/46174/strawberries-berries-fruit-freshness-46174.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
        <item>https://images.pexels.com/photos/46174/strawberries-berries-fruit-freshness-46174.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
        <item>https://images.pexels.com/photos/46174/strawberries-berries-fruit-freshness-46174.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
        <item>https://images.pexels.com/photos/46174/strawberries-berries-fruit-freshness-46174.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
        <item>https://images.pexels.com/photos/46174/strawberries-berries-fruit-freshness-46174.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
    </string-array>

    <string-array name="vegetables">
        <item>https://images.pexels.com/photos/255469/pexels-photo-255469.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
        <item>https://images.pexels.com/photos/255469/pexels-photo-255469.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
        <item>https://images.pexels.com/photos/255469/pexels-photo-255469.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
        <item>https://images.pexels.com/photos/255469/pexels-photo-255469.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
        <item>https://images.pexels.com/photos/255469/pexels-photo-255469.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
    </string-array>

    <string-array name="foods">
        <item>https://images.pexels.com/photos/1351238/pexels-photo-1351238.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
        <item>https://images.pexels.com/photos/1351238/pexels-photo-1351238.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
        <item>https://images.pexels.com/photos/1351238/pexels-photo-1351238.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
        <item>https://images.pexels.com/photos/1351238/pexels-photo-1351238.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
        <item>https://images.pexels.com/photos/1351238/pexels-photo-1351238.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
    </string-array>

    <string-array name="juice">
        <item>https://images.pexels.com/photos/109275/pexels-photo-109275.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
        <item>https://images.pexels.com/photos/109275/pexels-photo-109275.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
        <item>https://images.pexels.com/photos/109275/pexels-photo-109275.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
        <item>https://images.pexels.com/photos/109275/pexels-photo-109275.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
        <item>https://images.pexels.com/photos/109275/pexels-photo-109275.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
    </string-array>

    <string-array name="hotBeverage">
        <item>https://images.pexels.com/photos/705869/pexels-photo-705869.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
        <item>https://images.pexels.com/photos/705869/pexels-photo-705869.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
        <item>https://images.pexels.com/photos/705869/pexels-photo-705869.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
        <item>https://images.pexels.com/photos/705869/pexels-photo-705869.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
        <item>https://images.pexels.com/photos/705869/pexels-photo-705869.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2</item>
    </string-array>


    <!--Menu titles-->
    <string name="menuHome">Home</string>
    <string name="menuNews">News</string>
    <string name="menuShows">Shows</string>
    <string name="menuMusic">Music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="multi_line_dome_texts">Multi line demo texts</string>
    <string name="newTime">2 min</string>
    <string name="news">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</string>
    <string name="recommended">Recommended</string>
    <string name="favorites">Favorites</string>
</resources>